Fix: tabs breaking on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -583,9 +583,12 @@ padding-left: 0px !important;
         width: 100% ;
         padding:  0px 16px;
     }
+
+    .tabs-wrapper nav{
+        overflow-x: auto;
+    }
     .tabs{
-        overflow-x: visible;
-        width: 100%;
+        width: max-content;
     }
     .tabs a{
         display: inline-flex;
